# AnalyzerSDK

./: .gitignore  AnalyzerSDKConfig.cmake  readme.md
include/: Analyzer.h  AnalyzerChannelData.h  AnalyzerHelpers.h  AnalyzerResults.h  AnalyzerSettingInterface.h  AnalyzerSettings.h  AnalyzerTypes.h  LogicPublicTypes.h  SimulationChannelDescriptor.h
lib/: Analyzer.lib  Analyzer64.lib  libAnalyzer.dylib  readme.txt
lib/x86/: Analyzer.lib
lib/x86_64/: Analyzer.lib
lib_arm64/: Analyzer.lib  libAnalyzer.dylib
lib_x64/: readme.txt
testlib/: AnalyzerStubs.cpp  CMakeLists.txt  HelperStubs.cpp  MockChannelData.cpp  MockChannelData.h  MockResults.cpp  MockResults.h  MockSettings.h  MockSimulatedChannelDescriptor.cpp  MockSimulatedChannelDescriptor.h  SettingsStubs.cpp  StreamHelpers.cpp  StreamHelpers.h  TestAnalyzerData.h  TestHarnessVerification.cpp  TestInstance.cpp  TestInstance.h  TestMacros.h  TrivialAnalyzer.cpp
